--- a/styles/styles.css
+++ b/styles/styles.css
@@ -107,3 +107,26 @@ footer {
 .last-update {
     color: yellowgreen;
 }
+
+.box {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 5px;
+    width: 300px;
+    background: white;
+    border-radius: 8px;
+    padding: 20px;
+}
+
+.box {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 5px;
+    width: 300px;
+    background: white;
+    border-radius: 8px;
+    padding: 20px;
+}
+
+.box h3 {
+    color: white;
+    background: rgb(30, 72, 125);
+    padding: 10px;
+    border-radius: 5px;
+}
